add spawner to the example script

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ derive_builder = "0.7.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "*"
 amethyst = { git = "https://github.com/amethyst/amethyst", branch = "master", features = ["nightly"] }
+rand = "0.6.5"
 
 #sertmp = ser branch + ncollide3d override to changes branch
 nphysics3d = { git = "https://github.com/jojolepro/nphysics", branch = "sertmp", features = ["serde"] }
